# solidity-rs

./: Cargo.toml  LICENSE  README.md
solast/: Cargo.toml
solast/src/: brownie.rs  foundry.rs  hardhat.rs  main.rs  report.rs  todo_list.rs  truffle.rs
solast/src/analysis/: abi_encoding.rs  abstract_contracts.rs  address_balance.rs  address_zero.rs  array_assignment.rs  assert_usage.rs  assignment_comparisons.rs  call_graph.rs  check_effects_interactions.rs  comparison_utilization.rs  contract_locking_ether.rs  divide_before_multiply.rs  explicit_variable_return.rs  external_calls_in_loop.rs  floating_solidity_version.rs  ineffectual_statements.rs  inline_assembly.rs  invalid_using_for_directives.rs  large_literals.rs  manipulatable_balance_usage.rs  missing_return.rs  mod.rs  no_spdx_identifier.rs  node_modules_imports.rs  raw_address_transfer.rs  redundant_assignments.rs  redundant_comparisons.rs  redundant_getter_function.rs  redundant_imports.rs  redundant_state_variable_access.rs  require_without_message.rs  safe_erc20_functions.rs  secure_ether_transfer.rs  selfdestruct_usage.rs  source_unit.rs  state_variable_mutability.rs  state_variable_shadowing.rs  storage_array_loop.rs  tight_variable_packing.rs  unchecked_casting.rs  (+10 more)
solidity/: Cargo.toml
solidity/src/: lib.rs
solidity/src/ast/: blocks.rs  builder.rs  contracts.rs  documentation.rs  enumerations.rs  errors.rs  events.rs  expressions.rs  functions.rs  identifiers.rs  import_directives.rs  literals.rs  mod.rs  modifiers.rs  pragma_directives.rs  source_units.rs  statements.rs  structures.rs  types.rs  (+4 more)
(+5 files in other folders)
