[package]
name = "solast"
version = "0.1.0"
authors = ["Camden Smallwood <camden.smallwood@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.7"
eth-lang-utils = { path = "../eth-lang-utils" }
solang-parser = "0.3.0"
solidity = { path = "../solidity" }
yul = { path = "../yul" }
primitive-types = "0.10.1"
