[package]
name = "solidity"
version = "0.1.0"
authors = ["Camden Smallwood <camden.smallwood@gmail.com>"]
edition = "2021"

[dependencies]
eth-lang-utils = { path = "../eth-lang-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.7"
solang-parser = "0.3.0"
yul = { path = "../yul" }
